add Route and rename func

--- a/src/components/taskComponent/TaskListElement.module.css
+++ b/src/components/taskComponent/TaskListElement.module.css
@@ -94,8 +94,12 @@
 
 .ActionDelete {
   cursor: pointer;
+  margin-right: 20px;
 }
 
+.ActionNotes {
+  cursor: pointer;
+}
 .colorLow {
   color: #0ac947;
 }
